git-svn-id: http://ikube.googlecode.com/svn/trunk@234 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/www/index.html
+++ b/www/index.html
@@ -35,19 +35,19 @@
 								<a class="link" href="docs/fileshare.html">file share</a>
 								<a class="link" href="docs/email.html">email</a>
 								&nbsp;&nbsp;
-								<a href="/ikube/index.html?language=english" onclick="JavaScript:noLanguageSupport();">
+								<a href="#?language=english" onclick="JavaScript:noLanguageSupport();">
 									<img alt="English" src="images/flags/gb.gif" title="English">
 								</a>
-								<a href="/ikube/index.html?language=french" title="Français" onclick="JavaScript:noLanguageSupport();">
+								<a href="#?language=french" title="Français" onclick="JavaScript:noLanguageSupport();">
 									<img alt="Français" src="images/flags/fr.gif">
 								</a>
-								<a href="/ikube/index.html?language=german" title="Deutsch" onclick="JavaScript:noLanguageSupport();">
+								<a href="#?language=german" title="Deutsch" onclick="JavaScript:noLanguageSupport();">
 									<img alt="Deutsch" src="images/flags/de.gif">
 								</a>
-								<a href="/ikube/index.html?language=dutch" title="Nederlands" onclick="JavaScript:noLanguageSupport();">
+								<a href="#?language=dutch" title="Nederlands" onclick="JavaScript:noLanguageSupport();">
 									<img alt="Nederlands" src="images/flags/be.gif">
 								</a>
-								<a href="/ikube/index.html?language=russian" title="Русский" onclick="JavaScript:noLanguageSupport();">
+								<a href="#?language=russian" title="Русский" onclick="JavaScript:noLanguageSupport();">
 									<img alt="Русский" src="images/flags/ru.gif">
 								</a>
 								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -58,7 +58,7 @@
 				</tr>
 				<tr>
 					<td width="670" height="100%" valign="top">
-						<iframe src="docs/main.html" width="100%" height="100%" id="content" name="content" frameborder="0">
+						<iframe src="docs/main.html" width="100%" height="650px" id="content" name="content" frameborder="0">
 							<p>Your browser does not support internal frames.</p>
 						</iframe>
 					</td>
