git-svn-id: http://ikube.googlecode.com/svn/trunk@254 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/modules/war/src/main/webapp/index.html
+++ b/modules/war/src/main/webapp/index.html
@@ -25,14 +25,12 @@
 								<a class="title" href="index.html">ikube</a>
 							</td>
 							<td align="right">
-								<a class="link" href="link to google code release">download</a>
+								<a class="link" href="http://code.google.com/p/ikube/downloads/list">download</a>
 								<a class="link" href="docs/quickstart.html" target="content">quick start</a>
-								<a class="link" href="docs/configuration.html">configuration</a>
-								<a class="link" href="docs/lucene.html">lucene</a>
-								<a class="link" href="docs/database.html">database</a>
-								<a class="link" href="docs/internet.html">internet</a>
-								<a class="link" href="docs/fileshare.html">file share</a>
-								<a class="link" href="docs/email.html">email</a>
+								<a class="link" href="docs/configuration.html" target="content">configuration</a>
+								<a class="link" href="docs/lucene.html" target="content">lucene</a>
+								<a class="link" href="docs/clustering.html" target="content">clustering</a>
+								<a class="link" href="docs/indexes.html" target="content">indexes</a>
 								&nbsp;&nbsp;
 								<a href="/ikube/index.html?language=english" onclick="JavaScript:noLanguageSupport();">
 									<img alt="English" src="images/flags/gb.gif" title="English">
