--- a/modules/war/src/main/webapp/index.html
+++ b/modules/war/src/main/webapp/index.html
@@ -28,6 +28,7 @@
 								<a class="link" href="http://code.google.com/p/ikube/downloads/list">download</a>
 								<a class="link" href="docs/quickstart.html" target="content">quick start</a>
 								<a class="link" href="docs/configuration.html" target="content">configuration</a>
+								<a class="link" href="docs/searching.html" target="content">searching</a>
 								<a class="link" href="docs/lucene.html" target="content">lucene</a>
 								<a class="link" href="docs/clustering.html" target="content">clustering</a>
 								<a class="link" href="docs/indexes.html" target="content">indexes</a>
