git-svn-id: http://ikube.googlecode.com/svn/trunk@315 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/index.html
+++ b/code/war/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Ikube</title>
 		<link rel="shortcut icon" href="images/grey_ikube.gif" />
-		<link href="style/style-white.css" rel="stylesheet" type="text/css" media="screen" />
+		<!--<link href="style/style-white.css" rel="stylesheet" type="text/css" media="screen" />-->
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 		<meta name="Keywords" content="Michael Couck, Enterprise Search, Database Search" />
 		<meta name="Description" content="Ikube is an enterprise search application for large volumes of data." />
