Added an indexable page to the GUI for viewing the configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@545 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/style/index.html
+++ b/code/war/src/main/webapp/style/index.html
@@ -289,9 +289,8 @@
 					192.168.1.39.7217824850853
 				</a>
 			</td>
-			<td class="td-content">
-				
-				<img alt="Working" src="../images/icons/stopped.gif" title="Working">
+			<td><img alt="Working" src="../images/icons/stopped.gif" title="Working"></td>
+			<td class="td-content" style="vertical-align: top;">
 				false
 			</td>
 			<td colspan="5"></td>
