Fiddling with the actions configuration.

--- a/code/site/src/main/webapp/ass/conf.html
+++ b/code/site/src/main/webapp/ass/conf.html
@@ -163,50 +163,37 @@ and 18.4622110 respectively. Click on the Go! button at the bottom and wait for 
 on the right of the page as in the following screen shot<br></p>
 </div>
 <div class="paragraph">
-<p><span class="image bottom"><a class="image" href="images/geospatial-search.jpeg"><img src="images/geospatial-search.jpeg" alt="geospatial search" width="300" height="200"></a></span><br></p>
+<p>Gui screen shot:
+<span class="image bottom"><a class="image" href="../../images/geospatial-search.jpeg"><img src="images/geospatial-search.jpeg" alt="geospatial search" width="300" height="200"></a></span><br></p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_full_data_source">Full data source</h4>
-
+<div class="paragraph">
+<p>Todo&#8230;
+==== File system
+Todo&#8230;
+==== Internet
+Todo&#8230;
+==== Email
+Todo&#8230;
+==== Csv
+Todo&#8230;
+==== Log
+Todo&#8230;
+==== Svn
+Todo&#8230;
+==== Table
+Todo&#8230;
+==== Twitter
+Todo&#8230;</p>
 </div>
-<div class="sect3">
-<h4 id="_file_system">File system</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_internet">Internet</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_email">Email</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_csv">Csv</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_log">Log</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_svn">Svn</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_table">Table</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_twitter">Twitter</h4>
-
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-08-06 07:23:47 CEST
+Last updated 2014-09-09 17:06:13 CEST
 </div>
 </div>
 </body>
