Added a spelling correction strategy.

--- a/code/site/src/main/webapp/ass/index.html
+++ b/code/site/src/main/webapp/ass/index.html
@@ -20,12 +20,13 @@
 <div class="paragraph">
 <p><strong><a href="preface.html">Preface</a></strong><br>
 <strong><a href="install.html">Installation</a></strong><br>
-<strong><a href="conf.html">Configuration</a></strong><br>
+<strong><a href="configuration.html">Configuration</a></strong><br>
 <strong><a href="analytics.html">Analytics</a></strong><br>
 <strong><a href="search.html">Search</a></strong><br></p>
 </div>
 <div class="paragraph">
-<p><strong><a href="twitter.html">Twitter</a></strong><br>
+<p><strong><a href="architecture.html">Architecture</a></strong><br>
+<strong><a href="twitter.html">Twitter</a></strong><br>
 <strong><a href="use-cases.html">Use cases</a></strong><br></p>
 </div>
 <div class="paragraph">
@@ -41,7 +42,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-09-09 12:51:12 CEST
+Last updated 2014-09-14 15:51:13 CEST
 </div>
 </div>
 </body>
