Doing the use case for sentiment on blogs/sites.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -144,7 +144,7 @@
         <table>
             <tr>
                 <td class="detail detail-header light-blue">Web:</td>
-                <td class="detail detail-content">www.ikube.be/ikube</td>
+                <td class="detail detail-content" nowrap>www.ikube.be/ikube (guest/guest)</td>
             </tr>
             <tr>
                 <td class="detail detail-header light-blue">Email:</td>
@@ -720,7 +720,7 @@
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="company light-blue">LCM</td>
+                <td class="company light-blue">The Reference</td>
             </tr>
             <tr>
                 <td></td>
@@ -813,58 +813,6 @@
                 <td class="border-left"></td>
                 <td class="technologies">Jee, Maven, Spring, AOP, SOA, H2 Database, Lucene, JPA, SVN, Ant, TagLib,
                     Tiles, Spring Mvc, Oracle, Db2, Hazelcast
-                </td>
-            </tr>
-        </table>
-    </td>
-</tr>
-
-<tr>
-    <td>
-        <table border="0">
-            <tr>
-                <td></td>
-                <td class="border-left" height="3px"></td>
-            </tr>
-            <tr>
-                <td class="dates" nowrap>04/2010 - 07/2010</td>
-                <td class="border-left"></td>
-                <td class="function">Technical Architect/Senior Java Developer</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td class="border-left"></td>
-                <td class="company light-blue">Net Kokoon</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td class="border-left"></td>
-                <td class="content">
-                    During this period I developed and productized an enterprise search application which can
-                    index data from various sources(inter/intra net, file system, database) including complex
-                    data structures in databases. I have implemented and deployed variations of this application in
-                    companies like KBC Bank and the Ministry of Finance in Belgium, and Credit Agricole in France
-                    among others. The link is http://ikube.be/ikube/system/dash.html – administrator/administrator.
-
-                    I also finished another open source application called Serenity. It is a code coverage,
-                    complexity and dependency, static and dynamic code analysis library that has a Jenkins plugin
-                    front end for continuous integration. Feel free to have a look at it,
-                    https://wiki.jenkins-ci.org/display/JENKINS/Serenity+Plugin, and of course I would be pleased if
-                    you integrate it with your own CI system, hopefully that is Jenkins although the switch from
-                    CruiseControl to Jenkins should be relatively painless.
-
-                    As I developed this application alone I fulfilled all the roles from functional design,
-                    architecture and development.
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td class="border-left"></td>
-                <td class="technologies">
-                    Ikube: Jee, Maven, Spring, AOP, SOA, H2 Database, Lucene, JPA, SVN, Ant, TagLib, Tiles, Spring Mvc,
-                    Oracle, Db2, Hazelcast,
-                    Serenity: Hudson/Jenkins, Jelly, Stapler, ASM(byte code manipulation), Neodatis, JPA, and a little
-                    JavaScript, and some others.
                 </td>
             </tr>
         </table>
