Correcting the spelling checker and the analytics chaining.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -437,7 +437,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="bold-black" align="right">Spring Mvc:</td>
+                <td class="bold-black" align="right" nowrap>Spring Mvc:</td>
                 <td align="left" width="100%">
                     <div class="skill-hr" style="width: 65%;">&nbsp;</div>
                 </td>
@@ -560,6 +560,12 @@
                 <td class="bold-black" align="right">Kerberos:</td>
                 <td align="left" width="100%">
                     <div class="skill-hr" style="width: 35%;">&nbsp;</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="bold-black" align="right">Git:</td>
+                <td align="left" width="100%">
+                    <div class="skill-hr" style="width: 60%;">&nbsp;</div>
                 </td>
             </tr>
             <tr>
