Made the cv image smaller.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -132,7 +132,7 @@
 </head>
 <body>
 
-<img src="../images/055.jpg" width="400px;" height="600px;" style="border: 1px solid #000000; float: right;">
+<img src="../images/055-small.jpg" width="400px;" height="600px;" style="border: 1px solid #000000; float: right;">
 
 <table width="100%" border="0">
 <tr>
