Updated the autocomplete and spelling checker.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -186,15 +186,15 @@
         <table>
             <tr>
                 <td class="characteristics-header">English:</td>
-                <td>Favourite</td>
+                <td>Native</td>
             </tr>
             <tr>
                 <td class="characteristics-header">Dutch:</td>
-                <td>Not too bad</td>
+                <td>Good</td>
             </tr>
             <tr>
                 <td class="characteristics-header">French:</td>
-                <td>Not good</td>
+                <td>Smatterings</td>
             </tr>
             <tr>
                 <td class="characteristics-header">Afrikaans:</td>
@@ -924,7 +924,7 @@
                 <td></td>
                 <td class="border-left"></td>
                 <td class="technologies">
-                    Struts 1, Struts 2, JPA, Hibernate, Java, EJB, JMS, JMX, JSP, SQL, Maven(for the first time :))
+                    Struts 1, Struts 2, JPA, Hibernate, Java, EJB, JMS, JMX, JSP, SQL, Maven
                 </td>
             </tr>
         </table>
@@ -939,7 +939,7 @@
                 <td class="border-left" height="3px"></td>
             </tr>
             <tr>
-                <td class="dates" nowrap>03/2007 - 07/2007</td>
+                <td class="dates" nowrap>03/2007 - 06/2008</td>
                 <td class="border-left"></td>
                 <td class="function">Java Developer</td>
             </tr>
