Updating the online cv in fact.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -15,7 +15,7 @@
         }
 
         .name {
-            font-size: 42px;
+            font-size: 48px;
         }
 
         .name-first {
@@ -35,7 +35,7 @@
         }
 
         td.title {
-            padding-left: 20px;
+            padding-left: 10px;
             padding-bottom: 5px;
             font-weight: 500;
             font-family: Helvetica, serif;
@@ -158,7 +158,7 @@
     </th>
 </tr>
 <tr>
-    <td class="title">Technical Architect/Senior Java Developer</td>
+    <td class="title">Freelance Technical Architect/Senior Java Developer</td>
 </tr>
 <tr>
     <td class="thick-hr" colspan="2"></td>
@@ -862,7 +862,7 @@
                 <td class="border-left" height="3px"></td>
             </tr>
             <tr>
-                <td class="dates" nowrap>04/2010 - 07/2010</td>
+                <td class="dates" nowrap>01/2010 - 03/2010</td>
                 <td class="border-left"></td>
                 <td class="function">Technical Architect/Senior Java Developer</td>
             </tr>
