--- a/code/site/src/main/webapp/ass/weka.html
+++ b/code/site/src/main/webapp/ass/weka.html
@@ -145,7 +145,7 @@ instances in the input data set.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-09-14 12:01:22 CEST
+Last updated 2014-10-28 11:26:15 CET
 </div>
 </div>
 </body>
