--- a/code/site/src/main/webapp/ass/analytics.html
+++ b/code/site/src/main/webapp/ass/analytics.html
@@ -110,7 +110,7 @@ your specific type of data. Each of the algorithms are matched with filters that
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-09-09 12:13:02 CEST
+Last updated 2014-10-28 11:26:15 CET
 </div>
 </div>
 </body>
