--- a/code/site/src/main/webapp/ass/architecture.html
+++ b/code/site/src/main/webapp/ass/architecture.html
@@ -56,7 +56,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-09-14 16:13:14 CEST
+Last updated 2014-10-28 11:26:15 CET
 </div>
 </div>
 </body>
