--- a/code/site/src/main/webapp/ass/configuration.html
+++ b/code/site/src/main/webapp/ass/configuration.html
@@ -193,7 +193,7 @@ Todo&#8230;</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-09-09 17:06:13 CEST
+Last updated 2014-10-28 11:26:15 CET
 </div>
 </div>
 </body>
