--- a/code/site/src/main/webapp/ass/index.html
+++ b/code/site/src/main/webapp/ass/index.html
@@ -42,7 +42,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-09-14 15:51:13 CEST
+Last updated 2014-10-28 11:26:15 CET
 </div>
 </div>
 </body>
