--- a/code/site/src/main/webapp/ass/neuroph.html
+++ b/code/site/src/main/webapp/ass/neuroph.html
@@ -254,7 +254,7 @@ and return the result as the output, which will be the output of the network.</p
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-09-14 11:55:01 CEST
+Last updated 2014-10-28 11:26:15 CET
 </div>
 </div>
 </body>
