Added a configuration to the base configuration to scan the network looking for jvms to profile.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -187,10 +187,12 @@
         Live:<br>
         * http://ikube.be/ikube/system/dash.html - guest/guest<br>
         * https://wiki.jenkins-ci.org/display/JENKINS/Serenity+Plugin<br><br>
+        * Nothing live for the scanner of course ;)<br><br>
 
         Source:<br>
         * https://github.com/michaelcouck/ikube<br>
         * https://svn.jenkins-ci.org/trunk/hudson/plugins/serenity/<br><br>
+        * https://github.com/michaelcouck/scanner<br>
 
         Ikube is a processing platform, multi threaded, grid based for extreme volumes of data, specifically for analytics,
         using statistical models and neural networks for analyses. Future ready for IoT when processing real-time analytics in
@@ -202,6 +204,10 @@
         Integrated in the library is a production profiler. This will instrument only methods, and typically increases the cpu
         consumption by about 3%. Note that it is not recommended for profiling transactional methods, as these methods will already
         have been instrumented, and doing so again could have interesting side effects.<br><br>
+
+        Scanner is a network scanner, written in Scala(just for a laugh), that, well, scans a specific network range, and ports
+        of course. Can be run from the command line, and as a library to be used internally from Java/Scala or probably Groovy too
+        in fact.<br><br>
     </td>
     <td class="content">
         <table>
