Just comitting whatever changes I have on the machine, no idea what they are.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -179,20 +179,22 @@
 
 <tr>
     <td class="content" valign="top">
-        I would like to be involved in a project with competent developers, in a pleasant environment, ideally in a
-        machine learning or artificial intelligence application with lots of good coffee.<br><br>
+        I would like to be involved in a project with competent developers, in a pleasant environment,
+        ideally in a machine learning or artificial intelligence application with lots of good coffee.<br><br>
 
         Below are my open source projects, more like my hobby really:<br><br>
 
         Live:<br>
         * http://ikube.be/ikube/system/dash.html - guest/guest<br>
-        * https://wiki.jenkins-ci.org/display/JENKINS/Serenity+Plugin<br><br>
-        * Nothing live for the scanner of course ;)<br><br>
+        * https://wiki.jenkins-ci.org/display/JENKINS/Serenity+Plugin<br>
+        * Nothing live for the scanner of course ;)<br>
+        *  And nothing live for the search gui either<br><br>
 
         Source:<br>
         * https://github.com/michaelcouck/ikube<br>
-        * https://svn.jenkins-ci.org/trunk/hudson/plugins/serenity/<br><br>
+        * https://svn.jenkins-ci.org/trunk/hudson/plugins/serenity/<br>
         * https://github.com/michaelcouck/scanner<br>
+        * https://github.com/michaelcouck/ikube-client<br><br>
 
         Ikube is a processing platform, multi threaded, grid based for extreme volumes of data, specifically for analytics,
         using statistical models and neural networks for analyses. Future ready for IoT when processing real-time analytics in
@@ -208,6 +210,10 @@
         Scanner is a network scanner, written in Scala(just for a laugh), that, well, scans a specific network range, and ports
         of course. Can be run from the command line, and as a library to be used internally from Java/Scala or probably Groovy too
         in fact.<br><br>
+
+        The client gui is a search gui for the ikube server. Not finished, but could be interesting. Lots of work using Eclipse RCP,
+        difficult and expensive but in the end worth it because it is quite attractive. Even programmers can create nice looking documents
+        in Eclipse RCP, really.<br><br>
     </td>
     <td class="content">
         <table>
