Made a new version, 5.3.0, and changed the configuration to take 10 meg files.

--- a/code/site/src/main/webapp/ass/michael-couck-cv.html
+++ b/code/site/src/main/webapp/ass/michael-couck-cv.html
@@ -182,7 +182,7 @@
         I would like to be involved in a project with competent developers, in a pleasant environment,
         ideally in a machine learning or artificial intelligence application with lots of good coffee.<br><br>
 
-        Below are my open source projects, more like my hobby really:<br><br>
+        Below are my open source projects:<br><br>
 
         Live:<br>
         * http://ikube.be/ikube/system/dash.html - guest/guest<br>
@@ -447,27 +447,29 @@
                 <td class="border-left" height="3px"></td>
             </tr>
             <tr>
-                <td class="dates" nowrap>04/2014 - 09/2014</td>
+                <td class="dates" nowrap>11/2014 - current</td>
                 <td class="border-left"></td>
-                <td class="function">Senior Java Developer</td>
+                <td class="function">Technical Architect</td>
             </tr>
             <tr>
                 <td></td>
                 <td class="border-left"></td>
-                <td class="company light-blue">Belgacom</td>
+                <td class="company light-blue">Clear2Pay</td>
             </tr>
             <tr>
                 <td></td>
                 <td class="border-left"></td>
                 <td class="content">
-                    General development on the logical ESB that simplifies the SOAP backends to Json for clients.
+                    Technical design and architecture of requirements, coaching, code review and quality control. Monitoring
+                    the development team. Delivering custom software for banking payments software. Performance tweaking for the
+                    product. Third line support for issues.
                 </td>
             </tr>
             <tr>
                 <td></td>
                 <td class="border-left"></td>
                 <td class="technologies">
-                    Jee, Rest, Soap, Oracle, the usual suspects...
+                    Jee, Bpel, WebSphere, Oracle, Jms, Linux, Gradle
                 </td>
             </tr>
         </table>
@@ -675,6 +677,41 @@
         </table>
     </td>
 </tr>
+
+    <tr>
+        <td>
+            <table border="0">
+                <tr>
+                    <td></td>
+                    <td class="border-left" height="3px"></td>
+                </tr>
+                <tr>
+                    <td class="dates" nowrap>04/2014 - 09/2014</td>
+                    <td class="border-left"></td>
+                    <td class="function">Senior Java Developer</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="border-left"></td>
+                    <td class="company light-blue">Belgacom</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="border-left"></td>
+                    <td class="content">
+                        General development on the logical ESB that simplifies the SOAP backends to Json for clients.
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="border-left"></td>
+                    <td class="technologies">
+                        Jee, Rest, Soap, Oracle, the usual suspects...
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
 
 <tr>
     <td>
