Reverted to commit d045fbd1e8d219ab390454c05715f66fbfb885c0.

--- a/code/site/src/main/webapp/ass/preface.html
+++ b/code/site/src/main/webapp/ass/preface.html
@@ -26,7 +26,7 @@ specifically designed for massive volumes of data.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-10-28 11:26:15 CET
+Last updated 2015-04-09 10:01:45 CEST
 </div>
 </div>
 </body>
