Comitting the revision c65c08be25608e0eec04f7605ffe1709c2d54ecb.

--- a/code/site/src/main/webapp/ass/weka-algorithms.html
+++ b/code/site/src/main/webapp/ass/weka-algorithms.html
@@ -8455,7 +8455,7 @@ to them, then the vector of values that are used for using the algorithm.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-10-28 11:26:15 CET
+Last updated 2015-04-09 11:13:09 CEST
 </div>
 </div>
 </body>
