--- a/code/site/src/main/webapp/ass/security.html
+++ b/code/site/src/main/webapp/ass/security.html
@@ -21,7 +21,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-10-28 11:26:15 CET
+Last updated 2015-04-09 11:13:09 CEST
 </div>
 </div>
 </body>
