Updated the CV and made all the tests work again, I hope.

--- a/code/site/src/main/webapp/ass/analytics.html
+++ b/code/site/src/main/webapp/ass/analytics.html
@@ -110,7 +110,7 @@ your specific type of data. Each of the algorithms are matched with filters that
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-10-28 11:26:15 CET
+Last updated 2016-04-20 13:46:42 CEST
 </div>
 </div>
 </body>
