--- a/code/site/src/main/webapp/ass/configuration.html
+++ b/code/site/src/main/webapp/ass/configuration.html
@@ -193,7 +193,7 @@ Todo&#8230;</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-10-28 11:26:15 CET
+Last updated 2016-04-20 13:46:42 CEST
 </div>
 </div>
 </body>
