--- a/code/site/src/main/webapp/ass/preface.html
+++ b/code/site/src/main/webapp/ass/preface.html
@@ -26,7 +26,7 @@ specifically designed for massive volumes of data.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-10-28 11:26:15 CET
+Last updated 2016-04-20 13:46:42 CEST
 </div>
 </div>
 </body>
