--- a/code/site/src/main/webapp/ass/use-cases.html
+++ b/code/site/src/main/webapp/ass/use-cases.html
@@ -75,7 +75,7 @@ data in combinations.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-10-28 11:26:15 CET
+Last updated 2016-04-20 13:46:42 CEST
 </div>
 </div>
 </body>
