--- a/code/site/src/main/webapp/ass/weka-algorithms.html
+++ b/code/site/src/main/webapp/ass/weka-algorithms.html
@@ -8455,7 +8455,7 @@ to them, then the vector of values that are used for using the algorithm.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-10-28 11:26:15 CET
+Last updated 2016-04-20 13:46:42 CEST
 </div>
 </div>
 </body>
